2005-11-08  Vincent Noel  <vnoel@cox.net>

	* loglist.c: (loglist_init):
	* logrtns.c: (log_open): Cleanup after myself.

2005-11-08  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c: (logview_create_model):
	* loglist.c: (loglist_add_log):
	* logrtns.c: (log_read_dates), (log_open):
	* logview-findbar.c: (iter_is_visible), (logview_findbar_clear),
	(logview_findbar_entry_timeout),
	(logview_findbar_entry_changed_cb), (logview_findbar_grab_focus),
	(logview_findbar_connect), (logview_findbar_init),
	(logview_findbar_finalize), (logview_findbar_class_init):
	* logview-findbar.h:
	* logview.c: (logview_count_logs), (logview_add_logs_from_names),
	(logview_add_log), (logview_init): If the locale is utf8, don't
	convert to utf8. Create private structure for the filter bar. Cleanups.

2005-11-08  Vincent Noel  <vnoel@cox.net>

	* help/C/gnome-system-log.xml: Update the documentation.
	
	* logrtns.c: (log_read_dates), (log_open):
	* logview.c: (logview_close_log):
	* monitor.c: (monitor_callback): Optimize the log parsing. This is
	only noticeable with huge, huge logs, but it's a nice boost in
	this case.

2005-11-08  Vincent Noel <vnoel@cox.net>

	* Makefile.am:
	* log_repaint.c: (logview_update_statusbar):
	* logview.c: (logview_menus_set_state): 
	* info.c, info.h: remove, the same info is now 
	available in the status bar.

2005-11-08  Vincent Noel <vnoel@cox.net>

	* logrtns.c: (log_read_new_lines):
	* logview.c: (logview_toggle_statusbar), (logview_toggle_sidebar),
	(logview_toggle_calendar), (logview_init), (logview_window_new):
	* logview.h: Simplify - we don't need calendar_visible or
	sidepane_visible, GTK_WIDGET_VISIBLE is enough. Add an option to
	show/hide the status bar. Align the menu item descriptions with evince.
	Move the "filter" item to the "View" menu.

2005-11-08  Vincent Noel <vnoel@cox.net>

	* log_repaint.c: (model_fill_date_iter),
	(logview_add_new_log_lines), (logview_create_model_no_date),
	(logview_create_model), (log_repaint):