@@ -1,5 +1,12 @@
 2005-11-08  Vincent Noel  <vnoel@cox.net>
 
+	* logview.c: (logview_menus_set_state), (logview_add_log),
+	(logview_toggle_monitor), (logview_select_all),
+	(logview_menu_item_toggle_set_active): Fix toggle menu item
+	inconsistency.
+
+2005-11-08  Vincent Noel  <vnoel@cox.net>
+
 	* loglist.c: (loglist_init):
 	* logrtns.c: (log_open): Cleanup after myself.
 
